# bmm350-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: async_device.rs  bmm3_core.rs  bmm3_defs.rs  bmm3_enums.rs  bmm3_structs.rs  bmm3_types.rs  device.rs  interface.rs  lib.rs  registers.rs  sensor_data.rs  types.rs
